updated some background dteails

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pranjal Kumar</title>
     <link rel="stylesheet" type="text/css"href="style.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="image\favicon.ico?v=2">
     
 </head>
 <body>
+    <div class="top-container">
+    <img src="image\CLOUD.PNG" class="top-cloud"alt="">
+    <h1>I'm Pranjal.</h1>
+    <p>a <span class="pro">pro</span>grammer.</p>
+    <img src="image\CLOUD.PNG" class="bottom-cloud"alt="">
+    <img src="image\pngtree-forest-yellow-mountains-clipart-png-image_2942052.jpg" class="mountain"alt="">
+    </div>
+    <div class="middle-container">
     
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
+
 </body>
 </html>
