--- a/index.html
+++ b/index.html
@@ -5,25 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pranjal Kumar</title>
-    <link rel="stylesheet" type="text/css"href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="image\favicon.ico?v=2">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     
 </head>
 <body>
-    <div class="top-container">
-    <img src="image\CLOUD.PNG" class="top-cloud"alt="">
-    <h1>I'm Pranjal.</h1>
-    <p>a <span class="pro">pro</span>grammer.</p>
-    <img src="image\CLOUD.PNG" class="bottom-cloud"alt="">
-    <img src="image\pngtree-forest-yellow-mountains-clipart-png-image_2942052.jpg" class="mountain"alt="">
-    </div>
-    <div class="middle-container">
-    
+   <div class="top_container">
+    <img src="image\CLOUD.PNG" alt="CLOUD" class="c1"height="20%" width="20%">
+    <span class="text">
+    <h1>I'm Pranjal</h1>
+    </span>
+    <h2>an Engineer</h2>
+    <img src="image\CLOUD.PNG" alt="CLOUD" class="c2" height="20%" width="20%">
+    <img src="image\images.png" class="mount" alt="Mountain">
+   </div> 
 
-    </div>
-    <div class="bottom-container">
+   <div class="middle_container">
+   <div class="profile">
+    <img src="image\IMG_20221218_105404_068-removebg-preview.png" alt="photo" class="photo">
+    <h2>Hello</h2>
+    <p class="intro">
+    I am <strong><em>Pranjal Kumar</em></strong>, from Bihar pursuing my B-tech degree in Electrical Engineering 
+    from <strong>NIT Agartala</strong>. As <strong>Vice President</strong> of the Robotics Club <strong>ANARC</strong>, I led a team 
+    of passionate individuals in exploring the exciting world of robotics. Over the course of 6 months, I helped organize and facilitate various events, workshops, and competitions that promoted hands-on
+    learning and experimentation in the field of robotics. 
+    </p>
+   </div>
+   <hr>
+   <div class="skills">
+   <h2>My Skills</h2>
+   <div class="skill-row">
+    <img src="image\code-icon-design-vector-png_125856-removebg-preview.png" class="code-image" alt="code-image">
+    <h3>Design & Development</h3>
+    <p>
+        I started learning to code when I was 18 beacause I wanted to make my own games.Over time,I have gained a wealth of experience 
+        designing and developing mobile and web application.
+    </p>
+   </div>
+   <div class="skill-row">
+    <img src="image\chili-vector-269791-removebg-preview.png" class="chili-image" alt="chili-image">
+    <h3>Hot Wings Challenge</h3>
+    <p>
+        But my best skills is to eat hot wings. I am undisputed king of hot wings challenge.
+        Ghost peppers and Carolina Reapers are my fav snacks.
+    </p>
+   </div>
+<div class="Tech-stack">
+    <img src="image\Top_10_Tools_to_have_in_your_Marketing_Tech_Stack_in_2022-01.png" alt="tech-image" class="tech-image">
+    <h3>Tech Stack</h3>
+   <li>
+    Automation
+   </li>
+   <li>
+    Electrical and electronics
+   </li>
+   <li>
+    Robotic Design
+   </li>
+   <li>
+    Arduino IDE
+   </li>
+   <li>
+    Team Leadership
+   </li>
+</div>
+   </div>
+   <hr>
+   <div class="contact-me">
+    <h2>Get in touch</h2>
+    <h3>If you love hot wings as much as I do</h3>
+    <p class="contact-message">
+        Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!
+    </p>
+    <a href="mailto:pranjal@gmail.com" class="btn">Contact Me</a>
+   </div>
+   </div> 
 
-    </div>
+   <div class="bottom-container">
+   <a href="https://www.linkedin.com/in/pranjal-kumar-184913228/" class="footer-link">linkedin</a>
+   <a href="https://github.com/pranjalee30" class="footer-link">Github</a>
+   <a href="https://pranjalee30.github.io/weather.github.io/" class="footer-link">My Weather App</a>
+   <p class="copyright">© 2023 Pranjal Kumar</p>
+   </div> 
 
 </body>
 </html>
