--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p class="contact-message">
         Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!
     </p>
-    <a href="mailto:pranjal@gmail.com" class="btn">Contact Me</a>
+    <a href="mailto:pranjalk449@gmail.com" class="btn">Contact Me</a>
    </div>
    </div> 
 
