updated my fav food

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     </p>
    </div>
    <div class="skill-row">
-    <img src="image\chili-vector-269791-removebg-preview.png" class="chili-image" alt="chili-image">
-    <h3>Hot Wings Challenge</h3>
+    <img src="image\fotor_2023-5-23_4_2_15.jpg" class="paneer-chilli-image" alt="paneer-chilli-image">
+    <h3>Paneer Chilli Challenge</h3>
     <p>
-        But my best skills is to eat hot wings. I am undisputed king of hot wings challenge.
+        But my best skills is to eat Paneer Chilli. I am undisputed king of Paneer Chilli challenge.
         Ghost peppers and Carolina Reapers are my fav snacks.
     </p>
    </div>
@@ -74,9 +74,9 @@
    <hr>
    <div class="contact-me">
     <h2>Get in touch</h2>
-    <h3>If you love hot wings as much as I do</h3>
+    <h3>If you love Paneer Chilli as much as I do</h3>
     <p class="contact-message">
-        Love hot wings as much as I do? Let's talk about how awesome they are! We can code while we eat hot wings!
+        Love Paneer Chilli as much as I do? Let's talk about how awesome they are! We can code while we eat Paneer Chilli!
     </p>
     <a href="mailto:pranjalk449@gmail.com" class="btn">Contact Me</a>
    </div>
